changed some text

--- a/acasa.html
+++ b/acasa.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Acasă </title>
+  <title> Home </title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="slideshow.css">
@@ -19,42 +19,42 @@
 
 <ul>
 
-  <li><a class="active" href="acasa.html" style="color:#67d6ff">Acasă</a></li>
+  <li><a class="active" href="acasa.html" style="color:#67d6ff">Home</a></li>
 
   <li class="dropdown">
-    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Produse</a>
+    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="produse1.html">Living</a>
-      <a href="produse2.html">Bucătărie</a>
-      <a href="produse3.html">Dormitor</a>
+      <a href="produse1.html">Livin groom</a>
+      <a href="produse2.html">Kitchen</a>
+      <a href="produse3.html">Bedroom</a>
     </div> </li>
-  <li><a href="calculeaza.php" style="color:#ff9f44">Calculează</a></li>
-  <li><a href="comanda.php" style="color:#b9ff48">Comandă</a></li>
+  <li><a href="calculeaza.php" style="color:#ff9f44">Add up</a></li>
+  <li><a href="comanda.php" style="color:#b9ff48">Place Order</a></li>
 
 </ul>
 
-<h1 style="text-align:center;margin-top:100px;margin-bottom:50px;"> MAGAZIN DE MOBILĂ </h1>
+<h1 style="text-align:center;margin-top:100px;margin-bottom:50px;"> FURNITURE STORE </h1>
 
 
 <div class="container">
 
   <div class="mySlides">
-    <div class="numbertext">1 / 4 <i> Nume mobila 1</i> </div>
+    <div class="numbertext">1 / 4 <i> Name 1</i> </div>
     <img src="img1.png" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 4 <i> Nume mobila 2</i> </div>
+    <div class="numbertext">2 / 4 <i> Name 2</i> </div>
     <img src="img2.png" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 4 <i> Nume mobila 3</i> </div>
+    <div class="numbertext">3 / 4 <i> Name 3</i> </div>
     <img src="img3.png" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">4 / 4 <i> Nume mobila 4</i> </div>
+    <div class="numbertext">4 / 4 <i> Name 4</i> </div>
     <img src="img4.png" style="width:100%">
   </div>
 
@@ -66,7 +66,7 @@
 
 <script src="slideshow.js"></script>
 
-<h2 style="margin-left:50px;margin-top:100px"> Bine ați venit! </h2>
+<h2 style="margin-left:50px;margin-top:100px"> Welcome! </h2>
 
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ligula tellus, commodo ut porttitor vitae, venenatis id augue. Mauris volutpat convallis eleifend. Etiam et ipsum eu elit sollicitudin laoreet. Nulla at nibh vitae diam vestibulum ultrices non sed ligula. Fusce vitae porttitor quam. Nunc non pharetra mauris, eget bibendum neque. Vivamus non massa purus. Vivamus dignissim justo in nisi suscipit placerat. Vestibulum elit ex, gravida vel nulla ac, ullamcorper auctor magna. Praesent dignissim neque vestibulum orci interdum sollicitudin. Praesent viverra ut lorem a finibus. Pellentesque venenatis ac arcu in dictum. Nunc quis sem nisi. Nulla rhoncus nisi lorem, sed mollis ante facilisis bibendum. Vivamus tempor gravida bibendum. </p>
 
