--- a/produse1.html
+++ b/produse1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Living </title>
+  <title> Livingroom </title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="gallery.css">
@@ -18,22 +18,22 @@
 
 <ul>
 
-  <li><a href="acasa.html" style="color:#67d6ff">Acasă</a></li>
+  <li><a href="acasa.html" style="color:#67d6ff">Home</a></li>
 
   <li class="dropdown">
-    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Produse</a>
+    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a class="active" href="produse1.html">Living</a>
-      <a href="produse2.html">Bucătărie</a>
-      <a href="produse3.html">Dormitor</a>
+      <a class="active" href="produse1.html">Living room</a>
+      <a href="produse2.html">Kitchen</a>
+      <a href="produse3.html">Bedroom</a>
     </div> </li>
-  <li><a href="calculeaza.php" style="color:#ff9f44">Calculează</a></li>
-  <li><a href="comanda.php" style="color:#b9ff48">Comandă</a></li>
+  <li><a href="calculeaza.php" style="color:#ff9f44">Add up</a></li>
+  <li><a href="comanda.php" style="color:#b9ff48">Place order</a></li>
 
 
 </ul>
 
-<h1 style="text-align:center;margin-top: 100px"> MOBILĂ LIVING </h1>
+<h1 style="text-align:center;margin-top: 100px"> LIVING ROOM FURNITURE </h1>
 
 <p> Aliquam suscipit ante at porta fringilla. Morbi et viverra elit, vel lacinia est. Quisque congue est at massa volutpat, vitae tincidunt ligula porttitor. Aliquam gravida, libero lobortis auctor feugiat, leo eros ultricies eros, vitae rhoncus felis erat sit amet nisi. Vestibulum porta, nibh in rutrum tempus, odio arcu porttitor ante, eleifend porttitor justo est ac neque. Vestibulum commodo vitae justo bibendum lacinia. Donec ut eros vitae diam congue tincidunt eget non nisi.  </p>
 
