--- a/produse2.html
+++ b/produse2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Bucătărie </title>
+  <title> kitchen </title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="gallery.css">
@@ -18,22 +18,22 @@
 
 <ul>
 
-  <li><a href="acasa.html" style="color:#67d6ff">Acasă</a></li>
+  <li><a href="acasa.html" style="color:#67d6ff">Home</a></li>
 
   <li class="dropdown">
-    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Produse</a>
+    <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a  href="produse1.html">Living</a>
-      <a class="active" href="produse2.html">Bucătărie</a>
-      <a href="produse3.html">Dormitor</a>
+      <a  href="produse1.html">Living room</a>
+      <a class="active" href="produse2.html">Kitchen </a>
+      <a href="produse3.html">Bedroom</a>
     </div> </li>
-  <li><a href="calculeaza.php" style="color:#ff9f44">Calculează</a></li>
-  <li><a href="comanda.php" style="color:#b9ff48">Comandă</a></li>
+  <li><a href="calculeaza.php" style="color:#ff9f44">Add up</a></li>
+  <li><a href="comanda.php" style="color:#b9ff48">Place Order</a></li>
 
 
 </ul>
 
-<h1 style="text-align:center;margin-top: 100px"> MOBILĂ BUCĂTĂRIE  </h1>
+<h1 style="text-align:center;margin-top: 100px"> KITCHEN FURNITURE  </h1>
 
 <p> Donec molestie neque nec turpis commodo hendrerit. Suspendisse sit amet sem tincidunt, molestie ligula vitae, finibus diam. Nullam volutpat tristique tortor ac laoreet. Nunc non posuere mi. Nunc vitae nibh vitae nibh ultricies bibendum nec eget libero. Donec luctus at libero non commodo. Ut quis facilisis justo, ac tristique nisi. Aenean in rhoncus risus. Donec eget odio quis ex vehicula congue ac in ipsum. Donec nec suscipit enim.  </p>
 
