--- a/produse3.html
+++ b/produse3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Dormitor </title>
+    <title> Bedroom </title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="gallery.css">
@@ -18,23 +18,23 @@
 
 <ul>
 
-    <li><a href="acasa.html" style="color:#67d6ff">Acasă</a></li>
+    <li><a href="acasa.html" style="color:#67d6ff">Home</a></li>
 
     <li class="dropdown">
-        <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Produse</a>
+        <a href="javascript:void(0)" style="color:#ff5baa" class="dropbtn">Products</a>
         <div class="dropdown-content">
-            <a href="produse1.html">Living</a>
-            <a href="produse2.html">Bucătărie</a>
-            <a class="active" href="produse3.html">Dormitor</a>
+            <a href="produse1.html">Living room</a>
+            <a href="produse2.html">Kitchen</a>
+            <a class="active" href="produse3.html">Bedroom</a>
         </div> </li>
-    <li><a href="calculeaza.php" style="color:#ff9f44">Calculează</a></li>
-    <li><a href="comanda.php" style="color:#b9ff48">Comandă</a></li>
+    <li><a href="calculeaza.php" style="color:#ff9f44">Add up</a></li>
+    <li><a href="comanda.php" style="color:#b9ff48">Place Order</a></li>
 
 
 
 </ul>
 
-<h1 style="text-align:center;margin-top: 100px"> MOBILĂ DORMITOR </h1>
+<h1 style="text-align:center;margin-top: 100px"> BED ROOM FURNITURE </h1>
 
 <p> Vestibulum quis nulla lorem. Integer non rutrum ipsum. Fusce mollis rhoncus velit vitae gravida. Donec vitae egestas risus, a hendrerit ligula. In ullamcorper elementum tellus, sed malesuada ligula suscipit a. Ut eu fermentum felis. Donec eu velit aliquam, venenatis tortor eu, pulvinar odio. Nulla egestas nisl eget congue sollicitudin. Duis eget mauris molestie, eleifend turpis in, vestibulum tellus. Morbi sodales risus ac placerat congue. Phasellus eget hendrerit ligula.  </p>
 
