--- a/acasa.html
+++ b/acasa.html
@@ -40,22 +40,22 @@
 
   <div class="mySlides">
     <div class="numbertext">1 / 4 <i> Name 1</i> </div>
-    <img src="img1.png" style="width:100%">
+    <img src="img\img1.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 4 <i> Name 2</i> </div>
-    <img src="img2.png" style="width:100%">
+    <img src="img\img2.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 4 <i> Name 3</i> </div>
-    <img src="img3.png" style="width:100%">
+    <img src="img\img3.png" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">4 / 4 <i> Name 4</i> </div>
-    <img src="img4.png" style="width:100%">
+    <img src="img\img4.png" style="width:100%">
   </div>
 
 
