--- a/produse1.html
+++ b/produse1.html
@@ -41,7 +41,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img1.png">
-      <img src="img1.png" width="700" height="400">
+      <img src="img\img1.png" width="700" height="400">
     </a>
     <div class="desc">ID: 1</div>
     <div class="desc">Nume: Merida</div>
@@ -53,7 +53,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img2.png">
-      <img src="img2.png" width="700" height="400">
+      <img src="img\img2.png" width="700" height="400">
     </a>
     <div class="desc">ID: 2</div>
     <div class="desc">Nume: Safira</div>
@@ -64,7 +64,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img3.png">
-      <img src="img3.png" width="700" height="400">
+      <img src="img\img3.png" width="700" height="400">
     </a>
     <div class="desc">ID: 3</div>
     <div class="desc">Nume: Luca</div>
@@ -76,7 +76,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img4.png">
-      <img src="img4.png" width="700" height="400">
+      <img src="img\img4.png" width="700" height="400">
     </a>
     <div class="desc">ID: 4</div>
     <div class="desc">Nume: Talin</div>
@@ -88,7 +88,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img5.png">
-      <img src="img5.png" width="700" height="400">
+      <img src="img\img5.png" width="700" height="400">
     </a>
     <div class="desc">ID: 5</div>
     <div class="desc">Nume: Ania</div>
@@ -99,7 +99,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img6.png">
-      <img src="img6.png" width="700" height="400">
+      <img src="img\img6.png" width="700" height="400">
     </a>
     <div class="desc">ID: 6</div>
     <div class="desc">Nume: Arno</div>
