--- a/produse2.html
+++ b/produse2.html
@@ -40,7 +40,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img4.png">
-      <img src="img4.png" width="700" height="400">
+      <img src="img\img4.png" width="700" height="400">
     </a>
     <div class="desc">ID: 7</div>
     <div class="desc">Nume: Haga</div>
@@ -52,7 +52,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img5.png">
-      <img src="img5.png" width="700" height="400">
+      <img src="img\img5.png" width="700" height="400">
     </a>
     <div class="desc">ID: 8</div>
     <div class="desc">Nume: Nordic</div>
@@ -63,7 +63,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img6.png">
-      <img src="img6.png" width="700" height="400">
+      <img src="img\img6.png" width="700" height="400">
     </a>
     <div class="desc">ID: 9</div>
     <div class="desc">Nume: Lana</div>
@@ -75,7 +75,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img7.png">
-      <img src="img7.png" width="700" height="400">
+      <img src="img\img7.png" width="700" height="400">
     </a>
     <div class="desc">ID: 10</div>
     <div class="desc">Nume: Neo</div>
@@ -87,7 +87,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img8.png">
-      <img src="img8.png" width="700" height="400">
+      <img src="img\img8.png" width="700" height="400">
     </a>
     <div class="desc">ID: 11</div>
     <div class="desc">Nume: Parma</div>
@@ -98,7 +98,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img9.png">
-      <img src="img9.png" width="700" height="400">
+      <img src="img\img9.png" width="700" height="400">
     </a>
     <div class="desc">ID: 12</div>
     <div class="desc">Nume: Modena</div>
