--- a/produse3.html
+++ b/produse3.html
@@ -41,7 +41,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img7.png">
-            <img src="img7.png" width="700" height="400">
+            <img src="img\img7.png" width="700" height="400">
         </a>
         <div class="desc">ID: 13</div>
         <div class="desc">Nume: Ravena</div>
@@ -53,7 +53,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img8.png">
-            <img src="img8.png" width="700" height="400">
+            <img src="img\img8.png" width="700" height="400">
         </a>
         <div class="desc">ID: 14</div>
         <div class="desc">Nume: Glen</div>
@@ -64,7 +64,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img9.png">
-            <img src="img9.png" width="700" height="400">
+            <img src="img\img9.png" width="700" height="400">
         </a>
         <div class="desc">ID: 15</div>
         <div class="desc">Nume: Flores</div>
@@ -76,7 +76,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img10.png">
-            <img src="img10.png" width="700" height="400">
+            <img src="img\img10.png" width="700" height="400">
         </a>
         <div class="desc">ID: 16</div>
         <div class="desc">Nume: Evora</div>
@@ -88,7 +88,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img11.png">
-            <img src="img11.png" width="700" height="400">
+            <img src="img\img11.png" width="700" height="400">
         </a>
         <div class="desc">ID: 17</div>
         <div class="desc">Nume: Toto</div>
@@ -99,7 +99,7 @@
 <div class="responsive">
     <div class="gallery">
         <a target="_blank" href="img12.png">
-            <img src="img12.png" width="700" height="400">
+            <img src="img\img12.png" width="700" height="400">
         </a>
         <div class="desc">ID: 18</div>
         <div class="desc">Nume: Rosso</div>
